syntax = "proto3";
package pages;
option csharp_namespace = "Application.Protos.Pages";

import "elements/element.proto";
import "google/protobuf/timestamp.proto";

// Base definition
message Page {
	string id = 1;
	uint64 replication_id = 2;
    float width = 3;
    float height = 4;
	google.protobuf.Timestamp created_at = 5;
	google.protobuf.Timestamp updated_at = 6;
	repeated elements.Element elements = 7;
}